# movies

./: .gitignore  README.md  analyses.py  chord.html  dashboard.py  eda.py  movies_env.yml  movies_notebook.ipynb  movies_out.csv  pyproject.toml  viz.py
