[project]
name = "movies"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "altair>=5.4.1",
    "altair-viewer>=0.4.0",
    "bokeh>=3.4.3",
    "datapane>=0.17.0",
    "holoviews>=1.19.1",
    "ipython>=8.18.1",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "pandas>=1.5.3",
    "seaborn>=0.13.2",
    "squarify>=0.4.4",
]
